exports[`Bold`] = `
<span
  className=" ">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Default`] = `
<span
  className="">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Large`] = `
<span
  className=" ">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Small`] = `
<span
  className=" ">
  The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Thin`] = `
<span
  className=" ">
  The quick brown fox jumps over the lazy dog
</span>
`;
